Added card and sunscription module
