# src/controller/card.controller.ts
@@ -1,73 +1,67 @@
 import { Request, Response, NextFunction } from 'express';
-import { Op, where } from 'sequelize'
+import { Op, where, Sequelize } from 'sequelize'
 import { card } from '../models/card';
 import moment from 'moment';
-import {configureUpload} from '../helper/media.helper';
+import cardFormDataValidate from '../validator/card.validator';
+import { isJSONString } from '../helper/utils';
+
 
 const upsertCard: any = async (req: Request, res: Response) => {
     try {
-        const body: any = req.body
+        let body: any = req.body
+        body.card_logo = isJSONString(body.card_logo) ? JSON.parse(body.card_logo) : body.card_logo
+        body.card_settings = isJSONString(body.card_settings) ? JSON.parse(body.card_settings) : body.card_settings
+        body.card_items = isJSONString(body.card_items) ? JSON.parse(body.card_items) : body.card_items
+        body.card_style = isJSONString(body.card_style) ? JSON.parse(body.card_style) : body.card_style
+        const { error, value } = await cardFormDataValidate.validate(body);
+        if (error) {
+            return res.status(400).json({ status: false, message: error.details[0].message });
+        }
         let card_id: any = req.params.id
         body.user_id = req.user.user_id
-        console.log("body data",body.card_image)
+        body.card_logo = JSON.stringify(body.card_logo)
         body.card_settings = JSON.stringify(body.card_settings)
         body.card_items = JSON.stringify(body.card_items)
-        body.card_style =JSON.stringify(body.card_style)
+        body.card_style = JSON.stringify(body.card_style)
+
         if (card_id && card_id !== null) {
-            let findcardCard = await card.findOne({ where: { card_id: card_id } })
-            if (!findcardCard)
-                return res.status(404).send({ status: 404, message: res.__('BINGO_CARD_NOT_FOUND') });
-        }
-        if (card_id && card_id !== null) {
-            let updateCard : any = await card.update(body, { where: { card_id: card_id } })
-            if(updateCard > 0){                
-                const updatedRecord = await card.findOne({ where: { card_id: card_id } });
-                if(updatedRecord != null){
-                    if (body.card_type === 'images' || body.card_type === 'combo') {
-                        uploadImages(updatedRecord.card_id, body.card_image);
-                    }
-                    return res.status(200).send({ message: res.__('BINGO_CARD_UPDATED_SUCCESS'), data: updatedRecord });
-                }                
-            }else{
-                return res.status(401).send({status : 401, message: res.__('CARD_NOT_UPDATED') });
+            let findCard = await card.findOne({ where: { card_id: card_id } })
+            if (!findCard) {
+                return res.status(404).send({ status: 404, message: res.__('BINGO_CARD_NOT_FOUND') })
+            }
+            let updateCard: any = await card.update(body, { where: { card_id: card_id } })
+            if (updateCard > 0) {
+                const updatedRecord: any = await card.findOne({ where: { card_id: card_id } });
+                updatedRecord.card_logo = value.card_logo
+                updatedRecord.card_settings = value.card_settings
+                updatedRecord.card_style = value.card_style
+                updatedRecord.card_items = value.card_items
+                return res.status(200).send({ message: res.__('BINGO_CARD_UPDATED_SUCCESS'), data: updatedRecord });
+            } else {
+                return res.status(401).send({ status: 401, message: res.__('CARD_NOT_UPDATED') });
             }
         }
-        let createCard = await card.create(body)
+        let createCard: any = await card.create(body)
         if (createCard) {
-            const upload = configureUpload(card_id);    
-    try {
-        await uploadImages(upload, req);
-        next();
-    } catch (err) {
-        console.error('Error uploading images:', err);
-        // Handle the error and send a response to the client
-    }
+            createCard.card_logo = value.card_logo
+            createCard.card_settings = value.card_settings
+            createCard.card_style = value.card_style
+            createCard.card_items = value.card_items
             return res.status(200).send({ message: res.__('BINGO_CARD_CREATED_SUCCESS'), data: createCard });
+        } else {
+            return res.status(401).send({ status: 401, message: res.__('CARD_NOT_CREATED') });
         }
-        return res.status(401).send({ status: 401, message: res.__('CARD_NOT_CREATED') });
     } catch (e) {
         console.log(e);
         return res.status(400).send({ status: 400, message: res.__('SOMETHING_WENT_WRONG') });
     }
 };
-
-function uploadImages(cardId: number, images: any[]) {
-    console.log(cardId)
-    const uploadMiddleware = upload.array('card_images');
-    uploadMiddleware(images, null, (err: any) => {
-      if (err) {
-        console.error('Error uploading images:', err);
-      } else {
-        console.log('Images uploaded successfully');
-      }
-    });
-}  
 const getCardDetail: any = async (req: Request, res: Response) => {
     try {
-        let {user_id,card_title,card_type,card_grid,start_date,end_date} : any = req.query
-        start_date = moment.utc(start_date,"YYYY-MM-DD").format('YYYY-MM-DD')
-        end_date = moment.utc(end_date,'YYYY-MM-DD').format('YYYY-MM-DD')
-        let query: any = {where :{}}
+        let { user_id, card_title, card_type, card_grid, start_date, end_date }: any = req.body
+        start_date = start_date ? moment(start_date, "YYYY-MM-DD").startOf('day').format('YYYY-MM-DD HH:mm:ss') : ''
+        end_date = end_date ? moment(end_date, 'YYYY-MM-DD').endOf('day').format('YYYY-MM-DD HH:mm:ss') : ''
+        let query: any = { where: {}, raw: true }
         if (user_id && user_id !== undefined) {
             query.where.user_id = user_id
         }
@@ -84,50 +78,62 @@ const getCardDetail: any = async (req: Request, res: Response) => {
         }
         if (start_date && end_date) {
             query.where.createdAt = {
-                [Op.between]: [
-                    start_date, end_date]
-            };
-        } else if (start_date) {
+                [Op.and]: [Sequelize.literal(`createdAt BETWEEN '${start_date}' AND '${end_date}'`)]
+            }
+        } else if (start_date && !end_date) {
             query.where.createdAt = { [Op.gte]: start_date }
-        } else if (end_date) {
-            query.where.createdAt = { [Op.lte]:end_date }
+        } else if (!start_date && end_date) {
+            query.where.createdAt = { [Op.lte]: end_date }
         }
-
-        const cardDetail = await card.findAll(query)
+        let cardDetail: any = await card.findAll(query)
         if (cardDetail.length == 0) {
             return res.status(200).send({ status: 200, message: res.__('NO_CARD_FOUND_FOR_SEARCH') });
+        } else {
+            cardDetail.map((data: any) => {
+                data.card_logo = isJSONString(data.card_logo) ? JSON.parse(data.card_logo) : data.card_logo
+                data.card_settings = isJSONString(data.card_settings) ? JSON.parse(data.card_settings) : data.card_settings
+                data.card_style = isJSONString(data.card_style) ? JSON.parse(data.card_style) : data.card_style
+                data.card_items = isJSONString(data.card_items) ? JSON.parse(data.card_items) : data.card_items
+                return data
+            });
+            return res.status(200).send({ message: res.__('BINGO_CARD_FOUND'), data: cardDetail });
         }
-        return res.status(200).send({ message: res.__('BINGO_CARD_FOUND'), data: cardDetail });
     } catch (e) {
         console.log(e);
         return res.status(400).send({ status: 400, message: res.__('SOMETHING_WENT_WRONG') });
     }
-};
+}
 const getCardDetailById: any = async (req: Request, res: Response) => {
     try {
         const card_id = req.params.id
-        const cardDetail = await card.findOne({ where: { card_id: card_id } })
+        const cardDetail: any = await card.findOne({ where: { card_id: card_id } })
         if (!cardDetail) {
             return res.status(404).send({ status: 404, message: res.__('BINGO_CARD_NOT_FOUND') });
+        } else {
+            cardDetail.card_logo = JSON.parse(cardDetail.card_logo)
+            cardDetail.card_settings = JSON.parse(cardDetail.card_settings)
+            cardDetail.card_style = JSON.parse(cardDetail.card_style)
+            cardDetail.card_items = JSON.parse(cardDetail.card_items)
+            return res.status(200).send({ message: res.__('BINGO_CARD_FOUND'), data: cardDetail });
         }
-        return res.status(200).send({ message: res.__('BINGO_CARD_FOUND'), data: cardDetail });
     } catch (e) {
         console.log(e);
         return res.status(400).send({ status: 400, message: res.__('SOMETHING_WENT_WRONG') });
     }
-};
+}
 const deleteCard: any = async (req: Request, res: Response) => {
     try {
         const card_id = req.params.id
         const cardDetail = await card.destroy({ where: { card_id: card_id } })
         if (!cardDetail) {
             return res.status(404).send({ status: 404, message: res.__('BINGO_CARD_NOT_FOUND') });
+        } else {
+            return res.status(200).send({ message: res.__('BINGO_CARD_DELETE_SUCCESSFULLY') });
         }
-        return res.status(200).send({ message: res.__('SUBSCRIPTION_CANCEL_SUCCESS') });
     } catch (e) {
         console.log(e);
         return res.status(400).send({ status: 400, message: res.__('SOMETHING_WENT_WRONG') });
     }
-};
+}
 
 export = { upsertCard, getCardDetail, getCardDetailById, deleteCard } 
