# src/validator/card.validator.ts
@@ -1,28 +1,32 @@
-import { Segments, Joi, celebrate } from 'celebrate'
+import { Joi } from 'celebrate'
 
-export default {
-    createCard: () => celebrate({
-        [Segments.BODY]: Joi.object().keys({
-            card_logo : Joi.object(),
-            card_title  :Joi.string(),
-            card_type : Joi.string(),
-            card_grid : Joi.number().integer(),
-            card_settings: Joi.object(),
-            card_items : Joi.object(),
-            card_style :Joi.object(),
-            card_image: Joi.array()
-        })
-    }),
-    updateCard: () => celebrate({
-        [Segments.BODY]: Joi.object().keys({
-            card_logo : Joi.object(),
-            card_title  :Joi.string(),
-            card_type : Joi.string(),
-            card_grid : Joi.number().integer(),
-            card_settings: Joi.object(),
-            card_items : Joi.object(),
-            card_style :Joi.object()
-        })
-    })
+const cardFormDataValidate = Joi.object({
+    card_logo: Joi.object().required(),
+    card_title: Joi.string().required(),
+    card_type: Joi.string().required().valid('text', 'images', 'emojis', 'numbers', 'combo'),
+    card_grid: Joi.number().integer().required(),
+    card_settings: Joi.object().required(),
+    card_items: Joi.object().required(),
+    card_style: Joi.object().required()
+})
 
-}
+export = cardFormDataValidate
+
+// export default {
+//     createCard: () => celebrate({
+//         [Segments.BODY]: Joi.object().keys({
+//             card_logo : Joi.object(),
+//             card_title  :Joi.string().required(),
+//             card_type : Joi.string().required().valid('text','images','emojis','numbers','combo'),
+//             card_grid : Joi.number().integer().required(),
+//             card_settings: Joi.object().required(),
+//             card_items : Joi.object().required(),
+//             card_style :Joi.object().required(),
+//             card_image : Joi.when('card_type', {
+//                 is: Joi.exist().valid('images','combo'),
+//                 then: Joi.object().required(),
+//                 otherwise: Joi.object().allow(null, "")
+//               }),
+//         })
+//     })
+// }
